Fix for pitch template visibility.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,7 @@ table.secondary {
 }
 
 table.main {
-  width: 80%;
+  width: 90%;
   align-self: center;
 }
 
